--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "method-override": "^2.1.3",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.12",
-    "morgan": "^1.1.1"
+    "morgan": "^1.1.1",
+    "spearman-rho": "^1.0.5"
   }
 }
